--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 #header
 {
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     max-height: 148px;
@@ -8,6 +8,8 @@
     min-height: 78px;
     background-color: #2ecc71;
     overflow: hidden;
+    float: left;
+    
 }
 #logo
 {
@@ -34,16 +36,51 @@
     color: white;
     transition: all 0.5s;
     border-radius: 10px;
+   
+}
+
+.section:hover
+{
+    background-color: #2cc36b;
 }
 #register
 {
     float: right;
-    margin-top: -40px;
+    margin-top: -60px;
     height: 48px;
+    background-color: #27ae60;
+    width: 100px;
+    padding-top: 10px;
+    font-size: 18pt;
+    text-align: center;
+    color: white;
+    transition: all 0.5s;
+    border-radius: 10px;
+    margin-right: 15px;
 }
-.section:hover
+#register:hover
 {
     background-color: #2cc36b;
+}
+.create
+{
+    display: block;
+    margin-top: 128px;
+}
+.inp
+{
+    margin: 20px;
+    background-color: #2c3e50;
+    color: white;
+    padding: 15px;
+    width: 300px;
+    border-radius: 10px;
+}
+input, select
+{
+    background-color: transparent;
+    border: none;
+    border-left: 5px solid #3d566e;
 }
 body
 {
