--- a/style.css
+++ b/style.css
@@ -53,10 +53,14 @@
     padding-top: 10px;
     font-size: 18pt;
     text-align: center;
-    color: white;
     transition: all 0.5s;
     border-radius: 10px;
     margin-right: 15px;
+}
+#register a
+{
+    color: white;
+    text-decoration: none;
 }
 #register:hover
 {
@@ -66,6 +70,7 @@
 {
     display: block;
     margin-top: 128px;
+    z-index: 10;
 }
 .inp
 {
@@ -81,6 +86,24 @@ input, select
     background-color: transparent;
     border: none;
     border-left: 5px solid #3d566e;
+    transition: border-color 0.5s;
+}
+input:hover, input:active, select:hover, select:active
+{
+    border-color: #5d768e;
+}
+.loginpane
+{
+    background-color: #CCC;
+    padding: 50px;
+    padding-top: 20px;
+    max-width: 100%;
+    min-width: 20%;
+    display: table;
+    margin-right: auto;
+    margin-left: auto;
+    border-radius: 15px;
+    background-clip: fit-content;
 }
 body
 {
