change to option

--- a/style.css
+++ b/style.css
@@ -89,10 +89,17 @@ input, select
     transition: border-color 0.5s;
 	color:white;
 }
+
 input:hover, input:active, select:hover, select:active
 {
     border-color: #5d768e;
 }
+
+option
+{
+	color:grey;
+}
+
 .loginpane
 {
     background-color: #CCC;
