Routing Works!!! still have minor errors.

--- a/partials/login.html
+++ b/partials/login.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<div class="create loginpane">
+<div class="create loginpane" ng-controller="" id="login">
     <script src="../script/login.js"></script>
 
     <h1>Login</h1>
