--- a/partials/parties.html
+++ b/partials/parties.html
@@ -1,3 +1,8 @@
-<div ng-controller="" id="parties">
-    <h1>THIS IS THE PARTIES PAGE</h1>
+<div ng-controller="partyController" id="parties">
+    <div class="create loginpane">
+        <h1>Login</h1>
+        <button onclick="getData()">Party Data</button>
+
+        <div id="partydata"> </div>
+    </div>
 </div>
