NO FAHKING ERROR YEAH

--- a/partials/partyList.html
+++ b/partials/partyList.html
@@ -1,4 +1,4 @@
-<div ng-controller="partyController" id="parties">
+<div ng-controller="partyListController" id="parties">
     <div class="create loginpane">
         <h1>Login</h1>
         <button onclick="getData()">Party Data</button>
