--- a/partials/parties.html
+++ b/partials/parties.html
@@ -20,7 +20,7 @@
         query.find({
             success: function(results)
             {
-                var htmlst = ""
+                var htmlst = "";
                 results.forEach(function(entry)
                 {
                     htmlst += "<div class = block><div class = 'owner'>"+entry.get('Owner')+"</div>";
