--- a/partials/host.html
+++ b/partials/host.html
@@ -21,12 +21,12 @@
             <option value="November">November</option>
             <option value="December">December</option>
         </select><br>
-            Day: <input type="number" id="day" data-ng-model="day">
+            Day: <input type="number" id="day" data-ng-model="day" min="1" max="31">
         </div>
         <div class="inp">
-            Cost: $<input id="co" type="number" data-ng-model="co"><br>
+            Cost: $<input id="co" type="number" data-ng-model="co" min="0"><br>
         </div>
-        <a class="inp" ng-click="hostEvent">Submit</a>
+        <a class="inp" onclick="newEvent()">Submit</a>
     </div>
 
 </div>
