--- a/partials/partyList.html
+++ b/partials/partyList.html
@@ -1,8 +1,12 @@
-<div ng-controller="partyController" id="parties">
-    <div class="create loginpane">
-        <h1>Login</h1>
-        <button onclick="getData()">Party Data</button>
+<div ng-controller="" id="parties">
 
-        <div id="partydata"> </div>
+    <div id="mypane">
+    ayy lmao
     </div>
+    
+    <div id="partypane">
+    ayy lmao
+    </div>
+    <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.3.1.min.js"></script>
+    <script type="text/javascript" src="../pagelist.js"></script>
 </div>
