updated party list

--- a/partials/partyList.html
+++ b/partials/partyList.html
@@ -1,9 +1,7 @@
-<div ng-controller="partyListController" id="parties">
-    <div class="create loginpane">
-        <h1>Login</h1>
-        <button ng-click="getData">Party Data</button>
+<div ng-controller="" id="parties">
 
-        <div id="partyData" data-ng-model="partydata"> </div>
+    <div id="mypane">
+    ayy lmao
     </div>
     
     <div id="partypane">
