connecting stuff just the way i always do

--- a/partials/login.html
+++ b/partials/login.html
@@ -1,8 +1,5 @@
 <div class="create loginpane" ng-controller="loginController" id="login">
-    <script src="../script/login.js"></script>
-
     <h1>Login</h1>
-
     <div class="inp">
         Username: <input id="uname" type="text" data-ng-model="uname"><br>
     </div>
@@ -15,7 +12,7 @@
                 <a class="inp" href="#register">Register</a>
             </td>
             <td>
-                <a class="inp" onclick="signIn()">Sign In</a>
+                <a class="inp" ng-click="signIn">Sign In</a>
             </td>
         </tr>
     </table>
