moving pageList stuff to angular module

--- a/partials/host.html
+++ b/partials/host.html
@@ -26,7 +26,7 @@
         <div class="inp">
             Cost: $<input id="co" type="number" data-ng-model="co" min="0"><br>
         </div>
-        <a class="inp" ng-click="hostEvent">Submit</a>
+        <a class="inp" ng-click="hostEvent()">Submit</a>
     </div>
 
 </div>
