--- a/partials/login.html
+++ b/partials/login.html
@@ -12,7 +12,7 @@
                 <a class="inp" href="#register">Register</a>
             </td>
             <td>
-                <a class="inp" ng-click="signIn">Sign In</a>
+                <a class="inp" ng-click="signIn()">Sign In</a>
             </td>
         </tr>
     </table>
