--- a/partials/partyList.html
+++ b/partials/partyList.html
@@ -1,12 +1,5 @@
 <div ng-controller="" id="parties">
+    <div class="" id="partyPanel" ng-repeat="party in parties">
 
-    <div id="mypane">
-    ayy lmao
     </div>
-    
-    <div id="partypane">
-    ayy lmao
-    </div>
-    <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.3.1.min.js"></script>
-    <script type="text/javascript" src="../pagelist.js"></script>
 </div>
