working on the account. adding add friend features.

--- a/partials/account.html
+++ b/partials/account.html
@@ -11,7 +11,7 @@
         <div class="inp">
             Search for friends: <input id="friend" type="text" data-ng-model="friendName"><br>
         </div>
-        <a class="inp" ng-click="searchForFriends">Search</a>
+        <a class="inp" ng-click="searchForFriends()">Search</a>
 
         <div class="inp" id="results" data-ng-model="results"></div>
     </div>
