ok got it didnt save the home file :P

--- a/partials/home.html
+++ b/partials/home.html
@@ -29,9 +29,10 @@
       </div>
     </div>
 
-    <div class="container" style="margin:20px;">
+    <div class="container" >
       <!-- Example row of columns -->
-      <div class="row">
+      <img src="banner.png" class="img-responsive" alt="diagram">
+        <div class="row">
         <div class="col-md-4">
           <h2>Think Kickstarter but for parties</h2>
           <p>When you wanna throw a party just add where you're gonna have it and set your goal for how much money and party supplies you need.</p>
