--- a/partials/home.html
+++ b/partials/home.html
@@ -21,7 +21,7 @@
 
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
+    <div style="margin-top:78px;" class="jumbotron">
       <div class="container">
         <h1>Turnt!</h1>
         <p>We make planning parties a breeze in three easy steps</p>
