FIXED THE FONTS BOOYEAH

--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ option
 }
 body
 {
-    font-family: Noto Sans UI, Open Sans, sans-serif;
+    font-family: Open Sans, sans-serif;
 }
 #parties
 {
