--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ body
 h1, h2, h3, h4, h5, h6 {
     font-family: Open Sans, sans-serif;
 }
-p, div {
+p, div, td {
     font-family: Open Sans, sans-serif;
 }
 
