--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,7 @@ input, select
     border-left: 5px solid #3d566e;
     transition: border-color 0.5s;
 	color:white;
+	width: 100%;
 }
 
 input:hover, input:active, select:hover, select:active
@@ -149,4 +150,13 @@ body
 .ptyhat
 {
     float: left;
+}
+.ng-scope
+{
+    margin-top: 25px;
+}
+.oup
+{
+    display: block;
+    margin-bottom: 50px;
 }
