--- a/partials/partyDetails.html
+++ b/partials/partyDetails.html
@@ -1,6 +1,11 @@
 <div ng-controller="partyDetailsController" id="partyDetails">
-    <div>
-        {{$scope.party}}
+    <div id="partyPanel">
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        {{party}}
     </div>
 
     <a class="inp" ng-click="pledge()">Back this party and TurnUP!!</a>
