--- a/partials/partyList.html
+++ b/partials/partyList.html
@@ -1,13 +1,13 @@
 <div ng-controller="partyListController" id="parties">
     <div id="partyPanel" ng-repeat="party in parties" >
-        {{party}}
-        Owner      : {{party.Owner}}<br>
-        Time       : {{party.Month}}/{{party.Day}}/{{party.Year}}<br>
-        Funding    : {{party.currentFunding}}/{{party.Cost}}<br>
-        Location   : {{party.Location}}<br>
-        Description: {{party.Description}}<br>
-        Created At : {{party.createdAt}}<br>
-        Updated At : {{party.updatedAt}}<br>
+        {{party}} <br/>
+        Owner      : {{party.Owner}}<br/>
+        Time       : {{party.Month}}/{{party.Day}}/{{party.Year}}<br/>
+        Funding    : {{party.currentFunding}}/{{party.Cost}}<br/>
+        Location   : {{party.Location}}<br/>
+        Description: {{party.Description}}<br/>
+        Created At : {{party.createdAt}}<br/>
+        Updated At : {{party.updatedAt}}<br/>
 
         <a class="inp" ng-click="goToDetails(party)">Details</a>
     </div>
