Fixed friend add

--- a/partials/account.html
+++ b/partials/account.html
@@ -11,7 +11,7 @@
         <div class="inp">
             Search for friends: <input id="friend" type="text" data-ng-model="friendName"><br>
         </div>
-        <a class="inp oup" onclick="">Search</a>
+        <a class="inp oup" onclick="addaFriend()">Search</a>
         <a class="inp oup" onclick="logout()">Log Out</a>
         <div class="inp oup" id="fs" onclick=""><a></a></div>
     </div>
