an hour before times up

--- a/partials/account.html
+++ b/partials/account.html
@@ -13,6 +13,6 @@
         </div>
         <a class="inp oup" onclick="addaFriend()">Search</a>
         <a class="inp oup" onclick="logout()">Log Out</a>
-        <div class="inp oup" id="fs" onclick=""><a></a></div>
+        <div class="inp oup" id="fs" onclick=""></div>
     </div>
 </div>
